tests/ui/closures/binder/const-bound.stderr
error: late-bound const parameters cannot be used currently
  --> $DIR/const-bound.rs:4:15
   |
LL |     for<const N: i32> || -> () {};
   |               ^

error: late-bound const parameter not allowed on closures
  --> $DIR/const-bound.rs:4:9
   |
LL |     for<const N: i32> || -> () {};
   |         ^^^^^^^^^^^^

error: aborting due to 2 previous errors

